--- a/Desktop/SDFT14/Phase1/Project1/index.html
+++ b/Desktop/SDFT14/Phase1/Project1/index.html
@@ -77,7 +77,7 @@
            <p>The FBI's New Orleans Field Office is assisting the Orleans Parish Sheriff's Office in Louisiana with the search for and apprehension of Derrick Groves, the last of the state inmates who escaped from the Orleans Parish Jail on the morning of May 16, 2025. The FBI routinely offers assistance to our law enforcement partners, to provide additional manpower and specialized resources</p>
          </div>
          <div class="WakoraSasa">
-            <h2>DESTRUCTION OF PROPERTY AND ASSAULT</h2>
+            <h2>DESTRUCTION OF PROPERTY AND ASSAULT.</h2>
             <img src="https://www.fbi.gov/wanted/seeking-info/destruction-of-property-and-assault/@@images/image" width="200">
             <p>The Federal Bureau of Investigation's Los Angeles Field Office in California is seeking the public's assistance in identifying the unknown suspect who was engaged in both the destruction of federal government property and an assault on federal agents during the period of civil unrest in Paramount, California, on June 7, 2025.  He may have a tattoo on his right bicep and was wearing a gold crucifix chain around his neck.</p>
          </div>
